tests/baselines/reference/symbolProperty16.errors.txt
symbolProperty16.ts(16,5): error TS2454: Variable 'i' is used before being assigned.


==== symbolProperty16.ts (1 errors) ====
    class C {
        private [Symbol.iterator]: { x };
    }
    interface I {
        [Symbol.iterator]: { x };
    }
    
    declare function foo(i: I): I;
    declare function foo(a: any): any;
    
    declare function bar(i: C): C;
    declare function bar(a: any): any;
    
    foo(new C);
    var i: I;
    bar(i);
        ~
!!! error TS2454: Variable 'i' is used before being assigned.